@@ -1,0 +1,97 @@
+rup_mag,dist_rrup,site_vs30,result_type,damping,rsd575
+5,1,200,INTRA_EVENT_STDDEV,5,0.416264459208326
+5,1,500,INTRA_EVENT_STDDEV,5,0.416264459208326
+5,1,1000,INTRA_EVENT_STDDEV,5,0.416264459208326
+5,1,1200,INTRA_EVENT_STDDEV,5,0.416264459208326
+5,10,200,INTRA_EVENT_STDDEV,5,0.416264459208326
+5,10,500,INTRA_EVENT_STDDEV,5,0.416264459208326
+5,10,1000,INTRA_EVENT_STDDEV,5,0.416264459208326
+5,10,1200,INTRA_EVENT_STDDEV,5,0.416264459208326
+5,50,200,INTRA_EVENT_STDDEV,5,0.416264459208326
+5,50,500,INTRA_EVENT_STDDEV,5,0.416264459208326
+5,50,1000,INTRA_EVENT_STDDEV,5,0.416264459208326
+5,50,1200,INTRA_EVENT_STDDEV,5,0.416264459208326
+5,100,200,INTRA_EVENT_STDDEV,5,0.416264459208326
+5,100,500,INTRA_EVENT_STDDEV,5,0.416264459208326
+5,100,1000,INTRA_EVENT_STDDEV,5,0.416264459208326
+5,100,1200,INTRA_EVENT_STDDEV,5,0.416264459208326
+5,150,200,INTRA_EVENT_STDDEV,5,0.416264459208326
+5,150,500,INTRA_EVENT_STDDEV,5,0.416264459208326
+5,150,1000,INTRA_EVENT_STDDEV,5,0.416264459208326
+5,150,1200,INTRA_EVENT_STDDEV,5,0.416264459208326
+5,200,200,INTRA_EVENT_STDDEV,5,0.416264459208326
+5,200,500,INTRA_EVENT_STDDEV,5,0.416264459208326
+5,200,1000,INTRA_EVENT_STDDEV,5,0.416264459208326
+5,200,1200,INTRA_EVENT_STDDEV,5,0.416264459208326
+6,1,200,INTRA_EVENT_STDDEV,5,0.416264459208326
+6,1,500,INTRA_EVENT_STDDEV,5,0.416264459208326
+6,1,1000,INTRA_EVENT_STDDEV,5,0.416264459208326
+6,1,1200,INTRA_EVENT_STDDEV,5,0.416264459208326
+6,10,200,INTRA_EVENT_STDDEV,5,0.416264459208326
+6,10,500,INTRA_EVENT_STDDEV,5,0.416264459208326
+6,10,1000,INTRA_EVENT_STDDEV,5,0.416264459208326
+6,10,1200,INTRA_EVENT_STDDEV,5,0.416264459208326
+6,50,200,INTRA_EVENT_STDDEV,5,0.416264459208326
+6,50,500,INTRA_EVENT_STDDEV,5,0.416264459208326
+6,50,1000,INTRA_EVENT_STDDEV,5,0.416264459208326
+6,50,1200,INTRA_EVENT_STDDEV,5,0.416264459208326
+6,100,200,INTRA_EVENT_STDDEV,5,0.416264459208326
+6,100,500,INTRA_EVENT_STDDEV,5,0.416264459208326
+6,100,1000,INTRA_EVENT_STDDEV,5,0.416264459208326
+6,100,1200,INTRA_EVENT_STDDEV,5,0.416264459208326
+6,150,200,INTRA_EVENT_STDDEV,5,0.416264459208326
+6,150,500,INTRA_EVENT_STDDEV,5,0.416264459208326
+6,150,1000,INTRA_EVENT_STDDEV,5,0.416264459208326
+6,150,1200,INTRA_EVENT_STDDEV,5,0.416264459208326
+6,200,200,INTRA_EVENT_STDDEV,5,0.416264459208326
+6,200,500,INTRA_EVENT_STDDEV,5,0.416264459208326
+6,200,1000,INTRA_EVENT_STDDEV,5,0.416264459208326
+6,200,1200,INTRA_EVENT_STDDEV,5,0.416264459208326
+7,1,200,INTRA_EVENT_STDDEV,5,0.416264459208326
+7,1,500,INTRA_EVENT_STDDEV,5,0.416264459208326
+7,1,1000,INTRA_EVENT_STDDEV,5,0.416264459208326
+7,1,1200,INTRA_EVENT_STDDEV,5,0.416264459208326
+7,10,200,INTRA_EVENT_STDDEV,5,0.416264459208326
+7,10,500,INTRA_EVENT_STDDEV,5,0.416264459208326
+7,10,1000,INTRA_EVENT_STDDEV,5,0.416264459208326
+7,10,1200,INTRA_EVENT_STDDEV,5,0.416264459208326
+7,50,200,INTRA_EVENT_STDDEV,5,0.416264459208326
+7,50,500,INTRA_EVENT_STDDEV,5,0.416264459208326
+7,50,1000,INTRA_EVENT_STDDEV,5,0.416264459208326
+7,50,1200,INTRA_EVENT_STDDEV,5,0.416264459208326
+7,100,200,INTRA_EVENT_STDDEV,5,0.416264459208326
+7,100,500,INTRA_EVENT_STDDEV,5,0.416264459208326
+7,100,1000,INTRA_EVENT_STDDEV,5,0.416264459208326
+7,100,1200,INTRA_EVENT_STDDEV,5,0.416264459208326
+7,150,200,INTRA_EVENT_STDDEV,5,0.416264459208326
+7,150,500,INTRA_EVENT_STDDEV,5,0.416264459208326
+7,150,1000,INTRA_EVENT_STDDEV,5,0.416264459208326
+7,150,1200,INTRA_EVENT_STDDEV,5,0.416264459208326
+7,200,200,INTRA_EVENT_STDDEV,5,0.416264459208326
+7,200,500,INTRA_EVENT_STDDEV,5,0.416264459208326
+7,200,1000,INTRA_EVENT_STDDEV,5,0.416264459208326
+7,200,1200,INTRA_EVENT_STDDEV,5,0.416264459208326
+8,1,200,INTRA_EVENT_STDDEV,5,0.416264459208326
+8,1,500,INTRA_EVENT_STDDEV,5,0.416264459208326
+8,1,1000,INTRA_EVENT_STDDEV,5,0.416264459208326
+8,1,1200,INTRA_EVENT_STDDEV,5,0.416264459208326
+8,10,200,INTRA_EVENT_STDDEV,5,0.416264459208326
+8,10,500,INTRA_EVENT_STDDEV,5,0.416264459208326
+8,10,1000,INTRA_EVENT_STDDEV,5,0.416264459208326
+8,10,1200,INTRA_EVENT_STDDEV,5,0.416264459208326
+8,50,200,INTRA_EVENT_STDDEV,5,0.416264459208326
+8,50,500,INTRA_EVENT_STDDEV,5,0.416264459208326
+8,50,1000,INTRA_EVENT_STDDEV,5,0.416264459208326
+8,50,1200,INTRA_EVENT_STDDEV,5,0.416264459208326
+8,100,200,INTRA_EVENT_STDDEV,5,0.416264459208326
+8,100,500,INTRA_EVENT_STDDEV,5,0.416264459208326
+8,100,1000,INTRA_EVENT_STDDEV,5,0.416264459208326
+8,100,1200,INTRA_EVENT_STDDEV,5,0.416264459208326
+8,150,200,INTRA_EVENT_STDDEV,5,0.416264459208326
+8,150,500,INTRA_EVENT_STDDEV,5,0.416264459208326
+8,150,1000,INTRA_EVENT_STDDEV,5,0.416264459208326
+8,150,1200,INTRA_EVENT_STDDEV,5,0.416264459208326
+8,200,200,INTRA_EVENT_STDDEV,5,0.416264459208326
+8,200,500,INTRA_EVENT_STDDEV,5,0.416264459208326
+8,200,1000,INTRA_EVENT_STDDEV,5,0.416264459208326
+8,200,1200,INTRA_EVENT_STDDEV,5,0.416264459208326
