@@ -1,0 +1,97 @@
+rup_mag,dist_rrup,site_vs30,result_type,damping,rsd575
+5,1,200,MEAN,5,1.37907159316887
+5,1,500,MEAN,5,1.21159616360489
+5,1,1000,MEAN,5,1.09855638121541
+5,1,1200,MEAN,5,1.07061676809673
+5,10,200,MEAN,5,1.96949256381255
+5,10,500,MEAN,5,1.73031599402355
+5,10,1000,MEAN,5,1.56888056751354
+5,10,1200,MEAN,5,1.52897918708803
+5,50,200,MEAN,5,6.42580119840527
+5,50,500,MEAN,5,5.64544735649713
+5,50,1000,MEAN,5,5.11873708797752
+5,50,1200,MEAN,5,4.98855211400639
+5,100,200,MEAN,5,11.761142476732
+5,100,500,MEAN,5,10.3328610167914
+5,100,1000,MEAN,5,9.36882333172348
+5,100,1200,MEAN,5,9.13054580337664
+5,150,200,MEAN,5,18.8522788796311
+5,150,500,MEAN,5,16.5628448000186
+5,150,1000,MEAN,5,15.0175606301066
+5,150,1200,MEAN,5,14.635618618603
+5,200,200,MEAN,5,26.3725226393802
+5,200,500,MEAN,5,23.1698248392121
+5,200,1000,MEAN,5,21.0081210995485
+5,200,1200,MEAN,5,20.4738210072561
+6,1,200,MEAN,5,2.61307808882665
+6,1,500,MEAN,5,2.29574403773152
+6,1,1000,MEAN,5,2.08155517328764
+6,1,1200,MEAN,5,2.02861492623131
+6,10,200,MEAN,5,3.02570411376837
+6,10,500,MEAN,5,2.65826046639217
+6,10,1000,MEAN,5,2.41024945935707
+6,10,1200,MEAN,5,2.34894952194334
+6,50,200,MEAN,5,7.53471184357383
+6,50,500,MEAN,5,6.61969110868668
+6,50,1000,MEAN,5,6.00208561859906
+6,50,1200,MEAN,5,5.84943441839089
+6,100,200,MEAN,5,13.5018112482052
+6,100,500,MEAN,5,11.8621417416431
+6,100,1000,MEAN,5,10.7554248656513
+6,100,1200,MEAN,5,10.4818818642981
+6,150,200,MEAN,5,21.5243314513687
+6,150,500,MEAN,5,18.9104014177492
+6,150,1000,MEAN,5,17.1460943611803
+6,150,1200,MEAN,5,16.7100172957339
+6,200,200,MEAN,5,30.0521388376172
+6,200,500,MEAN,5,26.4025858440837
+6,200,1000,MEAN,5,23.9392712117109
+6,200,1200,MEAN,5,23.330423102105
+7,1,200,MEAN,5,6.0233571276818
+7,1,500,MEAN,5,5.29187637833373
+7,1,1000,MEAN,5,4.79815365767157
+7,1,1200,MEAN,5,4.67612209045148
+7,10,200,MEAN,5,6.34315850596296
+7,10,500,MEAN,5,5.57284085107054
+7,10,1000,MEAN,5,5.05290464128438
+7,10,1200,MEAN,5,4.92439398564839
+7,50,200,MEAN,5,11.2897916504706
+7,50,500,MEAN,5,9.91875136821384
+7,50,1000,MEAN,5,8.99334938204197
+7,50,1200,MEAN,5,8.76462129245824
+7,100,200,MEAN,5,19.1021048810756
+7,100,500,MEAN,5,16.782331755169
+7,100,1000,MEAN,5,15.2165698399547
+7,100,1200,MEAN,5,14.8295664220223
+7,150,200,MEAN,5,29.9530983264729
+7,150,500,MEAN,5,26.3155728826549
+7,150,1000,MEAN,5,23.8603764059188
+7,150,1200,MEAN,5,23.2535348299681
+7,200,200,MEAN,5,41.5698557406207
+7,200,500,MEAN,5,36.5215830609725
+7,200,1000,MEAN,5,33.11418385838
+7,200,1200,MEAN,5,32.2719899559419
+8,1,200,MEAN,5,16.8606888618577
+8,1,500,MEAN,5,14.8131148824707
+8,1,1000,MEAN,5,13.4310774238486
+8,1,1200,MEAN,5,13.0894844811412
+8,10,200,MEAN,5,17.1491945626804
+8,10,500,MEAN,5,15.0665842469522
+8,10,1000,MEAN,5,13.6608985442501
+8,10,1200,MEAN,5,13.3134605549885
+8,50,200,MEAN,5,22.8492250345982
+8,50,500,MEAN,5,20.0743989872568
+8,50,1000,MEAN,5,18.2014930130687
+8,50,1200,MEAN,5,17.7385739661601
+8,100,200,MEAN,5,34.2366967665229
+8,100,500,MEAN,5,30.078968098753
+8,100,1000,MEAN,5,27.2726534944986
+8,100,1200,MEAN,5,26.5790273862845
+8,150,200,MEAN,5,51.3112373324751
+8,150,500,MEAN,5,45.0799643831354
+8,150,1000,MEAN,5,40.8740833172585
+8,150,1200,MEAN,5,39.8345316893288
+8,200,200,MEAN,5,69.9628801654997
+8,200,500,MEAN,5,61.4665385199388
+8,200,1000,MEAN,5,55.7318190257345
+8,200,1200,MEAN,5,54.3143902177048
